Name:           Sirenial
Version:        0.1
Synopsis:       Type-safe SQL wrapper for Haskell
Description:    Type-safe SQL wrapper for Haskell


Author:         Martijn van Steenbergen
Maintainer:     martijn@van.steenbergen.nl
Stability:      Experimental
Copyright:      Some Rights Reserved (CC) 2010 Martijn van Steenbergen
Homepage:       http://code.google.com/p/sirenial/


Cabal-Version:  >= 1.2
License:        BSD3
License-file:   LICENSE
Category:       Network
Build-type:     Simple


Library
  Exposed-Modules:  Sirenial.Tables, Sirenial.Expr, Sirenial.Select, Sirenial.Modify
  Build-Depends:    base >= 4 && < 5,
                    time >= 1.1.4 && < 1.2,
                    convertible >= 1.0.8 && < 1.1,
                    HDBC >= 2.2.2 && < 2.3,
                    mtl >= 1.1.0.2 && < 1.2

